[package]
name = "rust"
version = "0.1.0"
authors = ["William Tu <u9012063@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ovsrust"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[profile.release]
lto = false
